Minor spacing fix

--- a/css/profile.css
+++ b/css/profile.css
@@ -5,7 +5,7 @@
 .profile-icon {
   display: inline-block;
   vertical-align: top;
-  margin-right: 8px;
+  margin: 12px;
 }
 
 .profile-body {
